--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "server",
+  "name": "blog",
   "version": "1.0.0",
-  "description": "create a blog app",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -9,12 +9,8 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "prettier": "^3.3.1"
-  },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
