--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "javascript-time-ago": "^2.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-time-ago": "^7.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
