--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "react-time-ago": "^7.3.3"
+    "react-time-ago": "^7.3.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
